--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,6 @@
 body {
 	color: #fff;
-	font-family: 'Helvetica', 'Tahoma', sans-serif;
+	font-family: 'Helvetica Neue', 'Tahoma', sans-serif;
 	font-weight: 200;
 	font-size: 12px;
 	text-align: center;
